--- a/restaurante-api/src/main/resources/application.yml
+++ b/restaurante-api/src/main/resources/application.yml
@@ -1,21 +1,17 @@
 spring:
   datasource:
-    url: jdbc:tc:postgresql:11.1:///loja
-    username: postgres
-    password: postgres
+    url: jdbc:postgresql://localhost:5432/restaurante
+    username: root
+    password: root
   jpa:
     database: postgresql
     hibernate:
       ddl-auto: create
     database-platform: org.hibernate.dialect.PostgreSQL94Dialect
-  data:
-    mongodb:
-      database: loja
-      host: 172.17.0.2
   main:
     lazy-initialization: true
 
 server:
   servlet:
     context-path: /api
-  port: 8081
+  port: 8082
